# stm32f4-disc-base

./: Cargo.toml  README.md  main.rs  memory.x  openocd.gdb
.cargo/: config.toml
